--- a/build.gradle
+++ b/build.gradle
@@ -18,6 +18,8 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-devtools:2.7.5'
 	implementation 'com.h2database:h2:2.1.214'
 	implementation 'org.mindrot:jbcrypt:0.4'
+	implementation 'com.fasterxml.jackson.dataformat:jackson-dataformat-xml'
+	implementation 'org.springframework.boot:spring-boot-starter-cache:2.4.0'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test:2.7.5'
 }
 
