--- a/build.gradle
+++ b/build.gradle
@@ -20,6 +20,9 @@ dependencies {
 	implementation 'org.mindrot:jbcrypt:0.4'
 	implementation 'com.fasterxml.jackson.dataformat:jackson-dataformat-xml'
 	implementation 'org.springframework.boot:spring-boot-starter-cache:2.4.0'
+	testImplementation 'org.junit.jupiter:junit-jupiter-api'
+	testImplementation 'junit:junit:4.13'
+    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.1'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test:2.7.5'
 }
 
